--- a/Presenation.Blender/presentationconfig.json
+++ b/Presenation.Blender/presentationconfig.json
@@ -29,8 +29,7 @@
                         {
                             "name": "text",
                             "position": { "x": 0, "y": 0, "z": 0 },
-                            "scale": { "x": 1, "y": 1, "z": 1 },
-                            "extrude": 0.3
+                            "scale": { "x": 1, "y": 1, "z": 1 }
                         }
                     ]
                 },
@@ -41,8 +40,7 @@
                         {
                             "name": "text",
                             "position": { "x": 5, "y": 5, "z": 0 },
-                            "scale": { "x": 1, "y": 2, "z": 1 },
-                            "extrude": 0.1
+                            "scale": { "x": 1, "y": 2, "z": 1 }
                         }
                     ]
                 },
